GKE-cloud-demo/demo/101-security-controls/platform-team.centos-to-frontend.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: platform-team.centos-to-frontend
  namespace: dev
spec:
  tier: platform-team
  order: 100
  selector: app == "centos"
  serviceAccountSelector: ''
  egress:
    - action: Allow
      protocol: UDP
      source: {}
      destination:
        selector: k8s-app == "kube-dns"
        namespaceSelector: projectcalico.org/name == "kube-system"
        ports:
          - '53'
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == "frontend"
        namespaceSelector: projectcalico.org/name == "hipstershop"
    - action: Pass
      source: {}
      destination: {}
  types:
    - Egress
