GKE-cloud-demo/demo/101-security-controls/security-team.quarantine.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security-team.quarantine
spec:
  tier: security-team
  order: 100
  selector: quarantine == "true"
  ingress:
  - action: Log
    source: {}
    destination: {}
  - action: Deny
    source: {}
    destination: {}
  egress:
  - action: Log
    source: {}
    destination: {}
  - action: Deny
    source: {}
    destination: {}
  types:
  - Ingress
  - Egress
